# Yudi-s-Shell

./: .gitignore  Cargo.toml  LICENSE  README.md  eg.rsh  todo.md
src/: job_manager.rs  main.rs  parser.rs  reader.rs  scanner.rs  shell.rs  test.rs  utils.rs
tests/: Makefile  fork.c  wait.c
