[package]
name = "yudi_shell"
version = "0.2.0"
authors = ["Yudi Yang <yyang116@u.rochester.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]

subprocess = { git = "https://github.com/2000jedi/rust-subprocess/" }
lazy_static = "*"
libc = "*"
rustyline = "7.1.0"
